--- a/gb/25/10/22/n14621828.md
+++ b/gb/25/10/22/n14621828.md
@@ -18,12 +18,18 @@
 <p>联邦政府也发出了需要降低房价的信号。联邦住房部长罗品信（Gregor Robertson）这周一在国会财政委员会表示，需要通过建造更多经济适用房，降低加拿大的平均房价。一项新的联邦法案，将为首次购房者免除最高5万元的新房联邦销售税。◇</p>
 <p>责任编辑：文风</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584635.md#1">加拿大房租连跌10个月</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587945.md#1">大多伦多房价8月续下滑 供应超需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588125.md#1">加拿大住房销售量连续4个月回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591201.md#1">博励治：加拿大面临住房危机 批政府不作为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14591909.md#1">卡尔加里房地产已进入买方市场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604654.md#1">加拿大8月房屋销售创四年来新高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652171.md#1">多伦多全新Finch West轻轨线太慢 市长承诺改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652166.md#1">未申报逾2300车辆 安省出口商面3690万元罚金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652113.md#1">中共是中国人民的敌人（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651399.md#1">过度拥挤＋毒品泛滥 安省监狱陷入恶性循环</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10966582.md#1" target="_blank">林辉：文革一个为妻子报仇的普通军人之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
