--- a/gb/25/11/6/n14630621.md
+++ b/gb/25/11/6/n14630621.md
@@ -36,12 +36,12 @@
 <p>黎定容虽已年届85岁，依然明眸皓齿，皮肤细腻、思维敏锐。她日常没有什么娱乐消遣，时不时还会去出诊。多年来每天坚持研读医书、写下一本本笔记，苦心研究各种疑难病症的治疗。</p>
 <p>“做医生是尽责任去医人，医好了我就开心，医不到我都会尽责，不是每个病都能医得到，总之是要尽责。”她坦言，至今还没有考虑过退休，对她来说，行医就是一种责任。“治好患者的病，就是我最开心的时候”。</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647791.md#1">【元气99】成功逆转糖尿病  不复发的真实案例</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647769.md#1">【元气99】逆转糖尿病：重视小肠的呼救讯号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646067.md#1">太好吃了！朋友都向我索要这款香蕉布丁的配方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/23/n14641391.md#1">褪黑激素助眠？研究：长期服用增心脏衰竭风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/27/n11142951.md#1" target="_blank">共产暴政录：中共鼓励外国残害海外华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
